--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "antd": "^5.20.6",
     "next": "14.2.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
